--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 		<mysql.connector.version>5.1.29</mysql.connector.version>
 		<junit.version>4.11</junit.version>
 		<logback.version>1.0.13</logback.version>
+		<jedis.version>2.8.0</jedis.version>
+		<protostuff.version>1.0.8</protostuff.version>
 	</properties>
 
 	<dependencies>
@@ -37,6 +39,24 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${jedis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-runtime</artifactId>
+			<version>${protostuff.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-core</artifactId>
+			<version>${protostuff.version}</version>
 		</dependency>
 
 	</dependencies>
